<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.systekcn.guide.activity.TopicActivity">
    <include layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/simple40dp"
        android:background="@color/md_grey_300"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:background="@color/md_grey_300"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="77dp"
            android:layout_height="@dimen/simple38dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:background="@color/md_white_1000"
            android:text="@string/activity_collection_has_choose"
            android:textColor="@color/md_red_400"
            android:textSize="14sp" />
            </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_collection_has_choose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/md_grey_300"
                android:gravity="center_vertical"
                android:orientation="horizontal"/>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/simple40dp"
            android:orientation="horizontal">
            <LinearLayout
                android:background="@color/md_grey_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="77dp"
                    android:layout_height="@dimen/simple38dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:background="@color/md_white_1000"
                    android:text="@string/activity_collection_years" />
            </LinearLayout>


            <HorizontalScrollView
                android:scrollbars="none"
                android:background="@color/md_grey_400"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_collection_years"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_collection_dongwei"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_dongwei" />

                    <TextView
                        android:id="@+id/tv_collection_beiqi"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_beiqi" />

                    <TextView
                        android:id="@+id/tv_collection_beiwei"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_beiwei" />

                    <TextView
                        android:id="@+id/tv_collection_xizhou"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_xizhou" />

                    <TextView
                        android:id="@+id/tv_collection_shang"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_shang" />

                    <TextView
                        android:id="@+id/tv_collection_sui"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_sui" />

                    <TextView
                        android:id="@+id/tv_collection_tangdai"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_tang" />

                    <TextView
                        android:id="@+id/tv_collection_handai"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_han" />

                    <TextView
                        android:id="@+id/tv_collection_chunqiu"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_chunqiu" />

                    <TextView
                        android:id="@+id/tv_collection_zhanguo"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_zhanguo" />

                    <TextView
                        android:id="@+id/tv_collection_qing"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_qing" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/simple40dp"
            android:orientation="horizontal">
            <LinearLayout
                android:background="@color/md_grey_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="77dp"
                    android:layout_height="@dimen/simple38dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:background="@color/md_white_1000"
                    android:text="@string/activity_collection_material" />
            </LinearLayout>

            <HorizontalScrollView
                android:scrollbars="none"
                android:background="@color/md_grey_400"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_collection_material"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_collection_shixiang"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_shixiang" />]

                    <TextView
                        android:id="@+id/tv_collection_qingtong"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_qingtong" />

                    <TextView
                        android:id="@+id/tv_collection_tongqi"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_tongqi" />

                    <TextView
                        android:id="@+id/tv_collection_shike"
                        style="@style/tv_topic_label"
                        android:text="@string/label_activity_collection_shike" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@color/md_grey_300" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_collection_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
